try fix overflow mobile

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -13,6 +13,7 @@ body {
 	padding:0;
 	height:100%;
 	text-rendering: optimizeLegibility;
+	overflow-y: scroll;
 }
 
 body{
@@ -350,6 +351,7 @@ max-height: 550px;
 	body{
 		color:#E6E6E6 ;
 		background: url("../images/shattered.png") #242222;
+		overflow-y: auto;
 	}
 
 	/* typo */
